jenkins/deploy/jenkins/zap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zap
  name: zap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zap
  template:
    metadata:
      labels:
        app: zap
    spec:
      containers:
      - name: zap
        image: owasp/zap2docker-stable:2.12.0
        command:
        - /bin/sh
        - -c
        - |
          while true
          do
            sleep 3600
          done
        volumeMounts:
        - name: zap-volume
          mountPath: /zap/wrk
      volumes:
      - name: zap-volume
        emptyDir: {}
