jenkins/deploy/jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jenkins
  ports:
    - port: 80
      targetPort: 8080
